# venoge

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  fix_style.sh
docker/: Dockerfile_ubuntu_18.04  entrypoint.sh
tests/: CMakeLists.txt  test_dummy.cpp
tests/catch2/: LICENSE.txt
venoge/: CMakeLists.txt  venoge.cpp
venoge/include/venoge/: venoge.h
venoge/src/: venoge.cpp
